<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" android:id="@+id/widgetRoot" android:layout_width="match_parent" android:layout_height="match_parent" android:orientation="vertical" android:padding="10dp" android:background="@drawable/bg_card">
 <TextView android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/app_name" android:textColor="@color/white" android:textStyle="bold" android:textSize="16sp"/>
 <TextView android:id="@+id/widgetStatus" android:layout_width="match_parent" android:layout_height="wrap_content" android:textColor="@color/orange" android:text="@string/widget_no_location"/>
 <TextView android:id="@+id/widgetAddress" android:layout_width="match_parent" android:layout_height="0dp" android:layout_weight="1" android:textColor="@color/muted" android:maxLines="2"/>
 <LinearLayout android:layout_width="match_parent" android:layout_height="40dp" android:orientation="horizontal">
  <TextView android:id="@+id/widgetSave" android:layout_width="0dp" android:layout_height="match_parent" android:layout_weight="1" android:gravity="center" android:background="@drawable/bg_primary_button" android:text="@string/widget_save" android:textColor="@color/white"/>
  <TextView android:id="@+id/widgetParking" android:layout_width="0dp" android:layout_height="match_parent" android:layout_weight="1" android:layout_marginStart="5dp" android:gravity="center" android:background="@drawable/bg_action_button" android:text="@string/widget_parking" android:textColor="@color/white"/>
  <TextView android:id="@+id/widgetNavigate" android:layout_width="0dp" android:layout_height="match_parent" android:layout_weight="1" android:layout_marginStart="5dp" android:gravity="center" android:background="@drawable/bg_action_button" android:text="@string/go_to_car" android:textColor="@color/white"/>
 </LinearLayout>
</LinearLayout>
